--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-roblox-ts": "^1.2.1",
     "prettier": "^3.6.2",
+    "rbxts-transformer-flamework": "^1.3.2",
     "roblox-ts": "^3.0.0",
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@flamework/components": "^1.3.2",
     "@flamework/core": "^1.3.2",
     "@flamework/networking": "^1.3.2",
     "@rbxts/charm": "^0.10.0",
