--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@flamework/components": "^1.3.2",
     "@flamework/core": "^1.3.2",
     "@flamework/networking": "^1.3.2",
+    "@quenty/symbol": "^3.5.0",
     "@rbxts/charm": "^0.10.0",
     "@rbxts/charm-payload-converter": "^1.1.0",
     "@rbxts/charm-sync": "^0.3.0",
